--- a/index.html
+++ b/index.html
@@ -1,59 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/default.css" />
-    <!-- Add Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Comfortaa"
-    />
-    <title>Biz BanK</title>
+    <title>Vite + React</title>
   </head>
-  <body class="d-flex align-items-center">
-    <!--Card-->
-    <div id="sample-text-card" class="card col-6 bg-transparent border-0">
-      <div class="card-body">
-        <h1 class="mb-3">Biz BanK</h1>
-        <h5 class="card-title">Your Trusted Online Banking Solution</h5>
-        <p class="card-text">
-          Celebrate the future of banking with Biz BanK. Experience unparalleled
-          convenience. <br />Discover a new era of online banking excellence
-          with us . . .
-        </p>
-
-        <!-- ... (previous HTML code) ... -->
-
-        <div class="button-wrapper">
-          <a href="login.html" class="btn btn-primary btn-lg mr-2" role="button"
-            >Login</a
-          >
-          <a href="register.html" class="btn btn-success btn-lg" role="button"
-            >Register</a
-          >
-        </div>
-
-        <a class="btn btn mt-4 text-warning" href="dashboard.html"
-          >dashbaord is here (sample preview without signup and login)</a
-        >
-
-        <!-- ... (remaining HTML code) ... -->
-      </div>
-    </div>
-    <footer class="text-center py-2">
-      Biz BanK PLC<br />
-      &copy; 2023 Biz BanK | All rights reserved | Devoloped by
-      <a href="https://github.com/SA-Sachin" target="blank" class="footer-link"
-        >IT Dept</a
-      >
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
